incluindo head da pagina

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>carrossel</title>
 </head>
 <body>
-    <div>
-        <h1>Super Mario O Filme 2023</h1>
-        <h6>feito com proposito de estudo</h6>
+    <div class="topo">
+        <h1  id="titulo">Super Mario O Filme 2023</h1>
+        <h6 id="aviso">feito com proposito de estudo</h6>
+        <img id="mario" src="./images/png-clipart-mario-mario.png" alt="">
     </div>
     <div class="content">
         <input type="radio" name="slide" id="slide1" checked>
